objects/StateProvince__c.object
<CustomObject>
    <description>SR0 - State/Province Reference Table</description>
    <fields>
        <fullName>CountryCode__c</fullName>
        <description>SR0 - Code of Country, used to make a link between state/province and country</description>
        <externalId>true</externalId>
        <label>Country Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SR0 - Country the State/Province is related with</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>States/Provinces</relationshipLabel>
        <relationshipName>StatesProvinces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StateProvinceCode__c</fullName>
        <description>SR0 - Code of State/Province, linked to standard State/Province Name</description>
        <externalId>true</externalId>
        <label>State/Province Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateProvinceExternalId__c</fullName>
        <description>combination of countrycode and statecode</description>
        <externalId>true</externalId>
        <label>StateProvinceExternalId</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateUniqueCode__c</fullName>
        <description>Formula field that concatenates the country code and state label, for uniquely identifying states in bMA. E.g. &quot;US-Alaska&quot;</description>
        <formula>CountryCode__c &amp; &quot;-&quot; &amp;  Name</formula>
        <label>State Unique Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_MigrationUniqueID__c</fullName>
        <description>Unique ID to be used by ODASEVA for synchronizing the records between environments</description>
        <externalId>true</externalId>
        <label>Migration Unique ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>State/Province</label>
    <listViews>
        <fullName>Australia</fullName>
        <columns>NAME</columns>
        <columns>StateUniqueCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>Australia</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brazil</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Country__c</columns>
        <columns>CountryCode__c</columns>
        <columns>StateProvinceCode__c</columns>
        <columns>StateProvinceExternalId__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>brazil</value>
        </filters>
        <label>Brazil</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>CH_province</fullName>
        <columns>NAME</columns>
        <columns>StateProvinceCode__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Switzerland,Liechtenstein</value>
        </filters>
        <label>CH-province</label>
        <language>en_US</language>
        <sharedTo>
            <group>AT_CH_NOECORE</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canada2</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>Canada</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>China_province2</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Country__c</columns>
        <columns>CountryCode__c</columns>
        <columns>TECH_MigrationUniqueID__c</columns>
        <columns>StateProvinceCode__c</columns>
        <columns>StateProvinceExternalId__c</columns>
        <columns>StateUniqueCode__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>China province</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Mexico1</fullName>
        <columns>NAME</columns>
        <columns>StateProvinceCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Mexico</value>
        </filters>
        <label>Mexico</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PROVINCIE_MONDO</fullName>
        <columns>CountryCode__c</columns>
        <columns>Country__c</columns>
        <columns>StateProvinceCode__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>PROVINCIE MONDO</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Papua_New_Guinea</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>CountryCode__c</columns>
        <columns>StateProvinceCode__c</columns>
        <columns>StateUniqueCode__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>StateProvinceExternalId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CountryCode__c</field>
            <operation>equals</operation>
            <value>PG</value>
        </filters>
        <label>Papua New Guinea</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Province_of_China</fullName>
        <columns>NAME</columns>
        <columns>StateProvinceCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CountryCode__c</field>
            <operation>equals</operation>
            <value>CN</value>
        </filters>
        <label>Province of China</label>
        <language>en_US</language>
        <sharedTo>
            <group>CNbFOChinaTeam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Province_of_Greece</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CountryCode__c</field>
            <operation>equals</operation>
            <value>GR</value>
        </filters>
        <label>Province of Greece</label>
        <language>en_US</language>
        <sharedTo>
            <group>GCPublicGroup</group>
            <group>GRAdoption</group>
            <group>GRCCCdepartment</group>
            <group>GRCustomerCareGroup</group>
            <group>GRGlobalsalesperformance</group>
            <group>GR_DIS_LIFE_SPACE</group>
            <group>GR_I2P</group>
            <group>GR_I2P_Public_group</group>
            <group>GR_MarCom_Team</group>
            <group>GR_NOE_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Province_of_India</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>StateProvinceExternalId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CountryCode__c</field>
            <operation>equals</operation>
            <value>IN</value>
        </filters>
        <label>Province of India</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Province_of_Japan</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>japan</value>
        </filters>
        <label>Province of Japan</label>
        <language>en_US</language>
        <sharedTo>
            <group>JP_ALL</group>
            <group>JP_PROFACE_ALL</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Province_of_Japan1</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>StateProvinceCode__c</columns>
        <columns>Country__c</columns>
        <columns>CountryCode__c</columns>
        <columns>StateUniqueCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>italy</value>
        </filters>
        <label>Province of Italy</label>
        <language>en_US</language>
        <sharedTo>
            <group>JP_ALL</group>
            <group>JP_PROFACE_ALL</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Province_of_Japan2</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>japan</value>
        </filters>
        <label>Province of Japan</label>
        <language>en_US</language>
        <sharedTo>
            <group>JP_ALL</group>
            <group>JP_PROFACE_ALL</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Province_of_Portugal</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>StateProvinceCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>portugal</value>
        </filters>
        <label>Province of Portugal</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>State/Province</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States/Provinces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>